--- a/01-intro.Rmd
+++ b/01-intro.Rmd
@@ -84,7 +84,7 @@ While the first Hi-C study produced genome-wide interactions at 1Mb resolution [
 ## Hierarchy of chromatin 3D structure
 
 The three-dimensonal organization of genome folding was studied extensively in recent years 
-and is reviewd comprehensively by leading expertes in the field [@Pombo2015; @Sexton2015; @Dekker2016; @Dixon2016; @Schmitt2016; @Bonev2016; @Hnisz2016; @Merkenschlager2016; @Long2016; @Ruiz-Velasco2017; @Andrey2017].
+and is reviewd comprehensively by leading expertes in the field [@Pombo2015; @Sexton2015; @Bouwman2015; @Dekker2016; @Dixon2016; @Schmitt2016; @Bonev2016; @Hnisz2016; @Merkenschlager2016; @Long2016; @Ruiz-Velasco2017; @Andrey2017].
 
 <!-- ---------------------------------------------------------------- -->
 ```{r GenomeHierarchy, fig.cap='(ref:GenomeHierarchy)', out.width='100%', fig.align='center'}
@@ -131,7 +131,7 @@ Furthermore, when analyzing Hi-C interactions at different length scales, hierar
 The different algorithms and parameters used in each study is only one source of variation 
 in reliably identifying TADs. Also, the resolution of Hi-C maps, which is mainly defined by
 sequencing depths but also the Hi-C protocol itself [@Rao2014], as well as different 
-normalization strategies for Hi-C contacts introduce variability [@Forcato2017]. 
+normalization strategies for Hi-C contacts introduce variability [@Dali2017; @Forcato2017]. 
 Therefore, the number and size of TADs varies between different studies, making it 
 difficult to compare TADs in different conditions and species across studies. 
 
@@ -144,19 +144,37 @@ Interestingly, TADs might be equivalent to "chromatin domains" of 10 kb - 1 Mb i
 The spatial positioning of TADs correlate with many genomic features measured along the
 linear genome [@Merkenschlager2016]. 
 TAD boundaries are enriched for binding of "insulator proteins", such as CTCF in mammals and CP190 in Drosophila [@Dixon2012; @Sexton2012]. Furthermore, TAD boundaries are associated 
-with active chromatin, such as H3K4me3 and H3K27me3, DNase I hypersensitivity, active transcription, 
+with active chromatin, such as H3K4me3 and H3K27me3, DNase I hypersensitivity, active transcription,
+short interspersed nuclear elements (SINEs),
 and house-keeping genes [@Dixon2012].
 TADs correspond to regions of early and late replication timing [@Pope2014; @Dileep2015] and lamina associated domains (LADs) [@Dixon2012].
-Importantly, enhancer-promoter interactions seems to be mostly constrained within TADs [@Shen2012]
+Importantly, enhancer-promoter interactions seems to be mostly constrained within TADs [@Shen2012; @Ghavi-helm2014; @Symmons2014]
 
 Altogether, there is accumulating evidence that TADs are fundamental units of chromosome organization [@Dixon2016]
 
 
 ### Chromatin loops
 
+Recent studies provide functional insights about how chromatin loops are
+formed and highlight the role of architectural proteins such as CTCF and
+cohesin [@Merkenschlager2016]. CTCF recognizes a specific sequence motif, to which it binds with high affinity [@Kim2007; @Nagy2016]. Interestingly, CTCF motifs are present in convergent orientation at chromatin loop anchors
+[@Rao2014; @Tang2015; @VietriRudan2015]. Furthermore, experimental inversion of the motif results in changes of loop formation and altered gene expression [@Guo2015; @deWit2015].
+Polymer simulations and experimental perturbations led to a model of
+loop extrusion, in which loop-extruding factors, such as cohesin, form
+progressively larger loops but stall at CTCF binding sites in convergent
+orientation [@Sanborn2015; @Fudenberg2016]. According to these models, CTCF binding sites can function as anchors of chromatin loops.
+
+
 In summary, these findings suggest a hierarchical organization of chromosome architecture. First, dynamic nucleosome contacts from clutches and fibers. 
 These engage in long-range chromatin loops, some of which are stabilized by architectural proteins, such as CTCF and cohesin, and lead to the formation of TADs.
 TADs form cluster by their epigenomic type into A/B compartments and coalescence of compartments in the same chromosome forms chromosome territories [@Bonev2016].
+
+### Molecular mechanisms of TAD and loop formation
+
+Several initial studies analyzed the role of CTCF and cohesin in TAD formation. 
+In two studies depletion of cohesin reduced interactions within TADs but did not alter TAD strucures completley [@Seitan2013; @Zuin2014]. One study report a significant increase in interactions between differnt TADs after cohesin depletion [@Sofueva2013]. Depletio of CTCF had a similar effect with increased inter-domains interactions [@Seitan2013; @Zuin2014].
+These result suggest a functinoal role of cohesin and CTCF in promoter-enhancer interactions and TAD formation [@Pombo2015].
+
 
 ## Dynamics of chromatin structure
 Proximity ligation experiments like Hi-C measure contact frequencies as average over millions of cells used in the experiments. Therefore, identified contacts might not be present in each individual cells and can be can be dynamic over short time-scales in each individual cell.
@@ -223,17 +241,39 @@ However, it remains to be investigated systematically if TAD regions as a whole 
 
 ## Disruption of chromatin architecture in disease
 
-The insulating function of TADs to restrict promoter-enhancer interactions within them [@Symmons2014] and evolutionary conservation of TADs suggests that alternations of TAD structures may
-induce ectopic interactions between regulatory elements, leading to gene dysregulation. 
-Several experiments of genetic manipulation of specific TAD boundaries can change the surrounding interaction
-patterns and thus affect the expression of nearby genes. 
-After experimental deletion of a 58-kb region encompassing a TAD boundary in mouse ESC, interactions between adjacent TADs significantly increase and genes in neighboring TADs were upregulated [@Nora2012].
+The insulating function of TADs restricting promoter-enhancer interactions [@Symmons2014] suggests that alternations of TAD structures may
+induce ectopic interactions between regulatory elements and genes in neighboring TADs, leading to gene dysregulation (Fig. \#ref(fig:EnhancerAdoption)). 
+
+Several experiments of genetic manipulation of specific TAD boundaries can change the surrounding interaction patterns and thus affect the expression of nearby genes. After experimental deletion of a 58-kb region encompassing a TAD boundary in mouse ESC, interactions between adjacent TADs significantly increase and genes in neighboring TADs were upregulated [@Nora2012].
 More precise deletion or inversion of CTCF binding site at loop anchors in TAD boundaries altered local chromatin architecture and nearby gene expression [@Dowen2014; @Guo2015; @Narendra2015].
+
+The alternation of chromatin contacts upon TAD boundary disruptions
+leads to the question whether disrutpion of TADs could also be and mechansim of disease pathology. This hypothesis were initilay dirven by studying the etiology of the Liebernberg syndrome, in which an upper-limb malformation phenotype is casued by deletion in the vinicity of *PITX1* gene. *PITX1* becomes therby accessible to an enhancer with specific activity in lower-limb and was missexpressed in a corresponding mouse model [@Spielmann2012]. 
+An overlap of thes deletion with later identifed TAD boundaries lead to the hypothesis of an regulatory effect mechanism of boundary deletions referred to as enhancer adoption [@Spielmann2013a].
+
+An association of TAD disrutpions with disease was first shown by computational analysis integrating TAD structures, with tissue specific enhancers, and large crhomosomal deletions associated with clinical phenotypes [@Ibn-Salem2014].
+
+In this study, the Human Phenotype Ontology database [@Kohler2014] was used to relate the phenotypes of 922 deletion cases from the DECIPHER database [@Firth2009] to monogenic diseases associated with genes in or adjacent to the deletions. This was used to differntiate for each deletion case between two possible pathogenic effect mechanism that best explains the phenotypes observed in the patients. Many deletions could be explained by a gene dosage mechansim and haploinsufficiency of genes located within the deletion. 
+However, about 12 percent of cases could be best explained by a TAD boundary disruption and a specific combinations of tissue-specific enhancers and genes in adjacent TADs. 
+Importantly, randomization of phenotype data showed that this enhancer adaption mechanism was significantly more frequent then expected by chance [@Ibn-Salem2014].
+Therfore, this study shows for the first time an association of TAD disrutpiton with genetic diseases and highglight an regulatory effect mechansims of TAD disruption that need to be further investigated and has to be considered when interpreting the gentic variations in patient genomes.
+
+<!-- ---------------------------------------------------------------- -->
+```{r EnhancerAdoption, fig.cap='(ref:EnhancerAdoption)', out.width='60%', fig.align='center'}
+knitr::include_graphics("figures/GDE_vs_TDBD_v03.png")
+```
+
+(ref:EnhancerAdoption) **Models of pathomechanisms by chromosomal deletions involving TAD disruption** In each panel, an exemplary deletion is shown as a red bar, a TDB is indicated with a black arrow, and genes associated with the phenotypes of the CNV patient are shown in blue, other genes in gray. Phenotypic abnormalities are represented as exemplary HPO terms (HP1, HP2 and HP3). Three tissue-specific enhancers are shown in (B) as black ovals. **(A)** Gene-dosage effect. A deletion leads to a reduction in the dosage of haplosensitive genes located within the CNV. The individual with the deletion has two phenotypic abnormalities (HP1, HP2) resulting from deletion of two haplosensitive genes. AMendelian disease related to mutations in the first gene is associated with HP1, and aMendelian disease related to mutations in the second gene is associated with HP2. **(B)** TAD boundary deletion and enhancer adoption. Removal of the topological domain boundary allows the tissue-specific enhancer inappropriately to activate a phenotypically relevant gene located adjacent to the deletion, a phenomenon that we refer to as enhancer adoption. In this case, the individual with the deletion has a phenotypic abnormality (HP3) that is also seen in individuals with a Mendelian disease related to a mutation in the gene adjacent to the deletion. Figure adopted from [@Ibn-Salem2014].
+
+
+Intersingly, these initial results are largly confirmed by very recent studies investigating structural variants that disrupt TADs and lead to ectopic gene expression in genetic diseases [@Lupianez2015; @Franke2016; @Redin2017] and cancers [@Northcott2014; @Hnisz2016; @Weischenfeldt2016]. This is discussed in more detial in secion \#ref(thesis-discussion).
+
+
 
 ## Aims of this thesis
 The recent advances of genome-wide ligation proximity mapping revealed that 
 interphase chromosomes are highly organized and structurally segregate into TADs.
-TADs were already shown to associate with diverse genomic functions such as histone modifications [@Dixon2012; @Sexton2012], replication timing [@Pope2014], and gene expression correlation [@Nora2012; @LeDilay2014]. 
+TADs were already shown to associate with diverse genomic functions such as histone modifications [@Dixon2012; @Sexton2012], replication timing [@Pope2014], and gene expression correlation [@Nora2012; @LeDily2014]. 
 We previously showed a significant association of TAD disruptions by large chromosomal deletions with clinical phenotypes, likely caused by an enhancer adaption mechanism [@Ibn-Salem2014; @Lupianez2015].
 However, it is still unclear how exactley the genome folds into TADs and what consequence this has for gene regulation during evolution and in genetic diseases. For example, it is not clear to which extends genes within the same TAD are expressed and regulated in a coordinated manner. Despite initial evidence of evolutionary conservation of TADs in homologous regions between human and mouse [@Dixon2012; @VietriRudan2015], there was no systematic analysis of the stability of TADs during evolution and the consequences of TAD disruptions on gene expression divergence between species. The accumulating evidence of the important gene regulatory function of TADs leads to the question if TADs play an important role in genetic diseases [@Spielmann2016]. More specifically, TADs might be used together with other genomic annotations, such as enhancers and their interactions with regulated genes to interpret structural variations in patient genomes. 
 Furthermore, increasing mechanistic understanding of chromatin looping interactions and TAD formation could be used to improve genome-wide contact maps and predict long-range interactions in diverse tissues and conditions.
